--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acme/app-ip_address",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "An IAP product serving IP address management functions.",
   "main": "main.js",
   "scripts": {
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/surendraradaye/app-ip_address#readme",
   "dependencies": {
     "ip-cidr": "^2.0.17"
-  }
+  },
+  "devDependencies": {}
 }
